--- a/.github/workflows/mail-on-push.yml
+++ b/.github/workflows/mail-on-push.yml
@@ -12,7 +12,7 @@ jobs:
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          subject: TERE
+          subject: TERE hommikust
           body: Email test from ${{github.repository}}. which is owned by ${{github.event.pusher.name}}.
           to: nasty.selyakova@gmail.com
           from: Github Actions
@@ -22,7 +22,7 @@ jobs:
     steps:
       - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}"
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
