--- a/.github/workflows/mail-on-push.yml
+++ b/.github/workflows/mail-on-push.yml
@@ -12,7 +12,7 @@ jobs:
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          subject: TERE hommikust
+          subject: TERE hommikust koigile
           body: Email test from ${{github.repository}}. which is owned by ${{github.event.pusher.name}}.
           to: nasty.selyakova@gmail.com
           from: Github Actions
